
V0.90
- NEW : Sort order for images (in porgess !!!)
- Changed : New default parameter for ImageRotator 3.15
- Added   : Change wp shortcode filter 
- Added   : TinyMCE V3 Button for WordPress 2.5
- Added   : Singlepic center class 
- Changed : wpdb->escape gallerytag in nggfunctions.
- Changed : Sort files after scan folder
- Changed : Check for filename during upload
- Bugfix  : P tags not closed in manage.php
- Bugfix  : Remove " from singlepic class

V0.83 - 14.02.2008
- Changed : New Interfaces.js from WP Core 2.5, for sortable bug under IE7
- Changed : Update to jQuery V1.2.2, deregister older version from WP
- Changed : Add ini_set 128MB for memory-limit
- Bugfix : SWFUpload Cookie Post_Params are overwritten , no upload possible
- Bugfix : WPMU options are not saved after installation
- Bugfix : Remove Flush rewrite rules during install 

V0.82 - 09.02.2008
- Bugfix : add_filter (searchnggallerytags) not proper included for some other plugins

V0.81 - 04.02.2008
- Changed : Use stristr first to reduce CPU cycles (THX to Alakhnor)
- Changed : Flush Rewrites rules after option update
- Changed : Rework for folder check under Safe-Mode 
- Bugfix : Check for array in get_option() (THX to Alessandro)
- Bugfix : Add Cookie to SWFUpload, show Error code included
- Bugfix : galShowOrder = Sildeshow at first didn't work
- Bugfix : Remove reference from ngg_getOnlyImages 

V0.80 - 02.02.2008
- NEW : SWFUpload integrated : Show upload progress and select multiple files in the file browser dialog. 
- NEW : Progress bar for resize, watermark and thumbnail operation
- NEW : Import Meta data from images
- NEW : Show Meta data information
- NEW : Cache option for SinglePic
- NEW : Permalink support
- NEW : Custom fields support - Change the settings for each post/page
- Changed : Up to 10 Widgets, exclude galleries from random/recent images. 
- Changed : Refactor permission check for Safe-Mode Check and mkdir/chmod