@@ -63,6 +63,28 @@ div.dashboard-widget-content .settings li {
 	background:#EAF3FA none repeat scroll 0%;
 }
 
+/* SETTINGS FOR MANAGE TABLE */
+
+.ngg-inlinebutton input {
+	bottom:1.3em;
+	float:right;
+	position:relative;
+	background:transparent none repeat scroll 0% 50%;
+	border-style:dotted;
+	border-width:1px;
+	margin:0pt;
+	padding:0.1em;
+}
+
+div .ngg-tablenav {
+	overflow:hidden;
+}
+
+#ngg-listimages td, #ngg-listimages th {
+	vertical-align:middle;
+	padding:10px 5px 10px;
+}
+
 /* SETTINGS FOR PROGRESS BAR */
 
 div .progressborder {
